--- a/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
+++ b/soverance.com/Areas/Team/Views/Team/ScottMcCutchen.cshtml
@@ -115,7 +115,7 @@
                                     <div class="position mt10">
                                         <h5 class="fsize-32 fweight-700 font-agency uppercase">Resume</h5>
                                     </div>
-                                    <a href="https://soverance-my.sharepoint.com/:w:/p/scott_mccutchen/Ect0wgQM5jtEg3TKJ6djfH4BHJzxjKzaNYnahxRFGgvy6g?e=mxPVtR" class="fsize-14 fweight-700 uppercase">
+                                    <a href="https://soverance-my.sharepoint.com/:w:/p/scott_mccutchen/EXiQv0h-C6FPpmyfBW82gfgBK_E30pdip4c3OfcO29Dsmg?e=Cdqqx1" class="fsize-14 fweight-700 uppercase">
                                         Scott McCutchen Resume - Word Online
                                     </a>
                                 </div>
