--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -34,19 +34,23 @@
                         </div>
                     </div>
                     <div class="lheight-26">
-                        <p>Founded in 2012 by Scott McCutchen, Soverance Studios is an independent game development company dedicated to bringing great ideas to life.</p>
-                        <p>Here at Soverance, we strive to create original content from unique ideas. We try to innovate with every project, and are always close to the bleeding edge of the technology curve.</p>
-                        <p>We specialize in application development with Unreal Engine for major platforms such as Steam, PlayStation, Xbox, and Oculus VR.</p>
+                        <p>Founded in 2012 by Scott McCutchen, Soverance Studios began as an independent game development company dedicated to bringing great ideas to life.</p>
+                        <p>Today, we're pivoting to helping small businesses solve problems in the cloud.</p>
+                        <p>Here at Soverance, we strive to build innovative solutions from unique ideas. We are on the bleeding edge of the technology curve, and always adding new skills to our offerings.</p>
+                        <p>We specialize in automated hybrid-cloud infrastructure design and deployment for small business, with a focus on the gaming industry.</p>                        
                     </div>
+                    <a href="//images/consulting/mpn-logo.png" data-lightbox="game-slides">
+                        <img src="/images/consulting/mpn-logo.png" alt="" class="img-responsive mlr-auto mb20">
+                    </a>
                     <ul class="list-1 pt10">
-                        <li class="color5">
-                            Soverance is a Microsoft Partner.
-                        </li>
                         <li class="color5">
                             Much of our work is open source <a href="https://github.com/soverance">on GitHub</a>!
                         </li>
                         <li class="color5">
                             Check out our <a href="/faq/">FAQ</a> or learn more about our <a href="/team/">Team</a>.
+                        </li>
+                        <li class="color5">
+                            <a href="/contact/">Contact Us</a> to learn more about our Azure consulting services <a href="/team/">Team</a>.
                         </li>
                     </ul>
                 </div>
