--- a/soverance.com/Views/Home/Consulting.cshtml
+++ b/soverance.com/Views/Home/Consulting.cshtml
@@ -40,7 +40,13 @@
                         Microsoft enterprise solutions consulting
                     </li>
                     <li class="color5">
-                        Active Directory / Group Policy auditing
+                        Azure Cloud Platform consulting
+                    </li>
+                    <li class="color5">
+                        Active Directory / Group Policy Auditing
+                    </li>
+                    <li class="color5">
+                        SQL Server Health and Performance Tuning
                     </li>
                     <li class="color5">
                         Business process automation with PowerShell
@@ -52,13 +58,13 @@
                         Unreal Engine consulting
                     </li>
                     <li class="color5">
-                        Network infrastructure consulting
+                        Global Network Infrastructure consulting
                     </li>
                     <li class="color5">
-                        Disaster Recovery consulting
+                        On-Site Disaster Recovery consulting
                     </li>
                     <li class="color5">
-                        Project Management consulting
+                        Azure Modern Data Warehouse solutions consulting
                     </li>
                 </ul>
                 <p></p>
@@ -105,8 +111,8 @@
                     </div>
                     <div class="price-content equal-height">
                         <div class="item-list">Complete cloud services with Azure for small business.</div>
-                        <div class="item-list">Host your application in Microsoft&#39;s Azure cloud.</div>
-                        <div class="item-list">Guaranteed high availability with unlimited 24 x 7 support.</div>
+                        <div class="item-list">Host your infrastructure in Microsoft&#39;s Azure cloud.</div>
+                        <div class="item-list">Guaranteed high availability with personal, rapid response support.</div>
                     </div>
                     <div class="text-center pb60">
                         <a href="/Contact" class="btn border-btn color-white plr50 ptb19">Inquire Now</a>
@@ -129,7 +135,7 @@
                     <div class="price-content equal-height">
                         <div class="item-list">Audit your small business network performance and security.</div>
                         <div class="item-list">Design automated solutions for better user experiences.</div>
-                        <div class="item-list">24 x 7 disaster recovery support.</div>
+                        <div class="item-list">Supercharge your operations with hybrid cloud solutions.</div>
                     </div>
                     <div class="text-center pb60">
                         <a href="/Contact" class="btn border-btn color-white plr50 ptb19">Inquire Now</a>
