--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -39,7 +39,7 @@
                         <p>Here at Soverance, we strive to build innovative solutions from unique ideas. We are on the bleeding edge of the technology curve, and always adding new skills to our offerings.</p>
                         <p>We specialize in automated hybrid-cloud infrastructure design and deployment for small business, with a focus on the gaming industry.</p>                        
                     </div>
-                    <a href="//images/consulting/mpn-logo.png" data-lightbox="game-slides">
+                    <a href="/images/consulting/mpn-logo.png" data-lightbox="game-slides">
                         <img src="/images/consulting/mpn-logo.png" alt="" class="img-responsive mlr-auto mb20">
                     </a>
                     <ul class="list-1 pt10">
@@ -50,7 +50,7 @@
                             Check out our <a href="/faq/">FAQ</a> or learn more about our <a href="/team/">Team</a>.
                         </li>
                         <li class="color5">
-                            <a href="/contact/">Contact Us</a> to learn more about our Azure consulting services <a href="/team/">Team</a>.
+                            <a href="/contact/">Contact Us</a> to learn more about our Azure <a href="/consulting/">consulting services</a>.
                         </li>
                     </ul>
                 </div>
