--- a/soverance.com/Views/Home/Consulting.cshtml
+++ b/soverance.com/Views/Home/Consulting.cshtml
@@ -29,11 +29,14 @@
             <div class="open-bl">
                 <p>
                     As a member of the Microsoft Partner Network, Soverance Studios is proud to offer high-quality DevOps consulting for Microsoft environments to improve the efficiency of your business.
-                    Our skills include custom application development, process automation, systems integration, service migration, network architecture, disaster recovery, and much more.
+                    Specializing in the Azure Cloud platform, our skills include architecture design, infrastructure deployment, custom application development, process automation, systems integration, service migration, networking, disaster recovery, data services, and much more.
                 </p>
+                <a href="/images/consulting/mpn-logo.png" data-lightbox="game-slides">
+                    <img src="/images/consulting/mpn-logo.png" alt="" class="img-responsive mlr-auto mb20" style="width: 50%; height: 50%">
+                </a>
                 <p>
                     Soverance Studios can help your organization achieve an extremely high level of technical competency in a short period of time.
-                    Whether on-prem or in the cloud, Soverance and Microsoft can help your business succeed. We offer the following services:
+                    Whether in the cloud or on-prem, Soverance and Microsoft can help your business succeed. We offer the following services:
                 </p>
                 <ul class="list-1">
                     <li class="color5">
@@ -58,7 +61,7 @@
                         Unreal Engine consulting
                     </li>
                     <li class="color5">
-                        Global Network Infrastructure consulting
+                        Global Network & VPN Infrastructure consulting
                     </li>
                     <li class="color5">
                         On-Site Disaster Recovery consulting
