--- a/soverance.com/Views/Home/Consulting.cshtml
+++ b/soverance.com/Views/Home/Consulting.cshtml
@@ -40,10 +40,19 @@
                 </p>
                 <ul class="list-1">
                     <li class="color5">
-                        Microsoft enterprise solutions consulting
+                        Azure Cloud Platform consulting
                     </li>
                     <li class="color5">
-                        Azure Cloud Platform consulting
+                        Office 365 Sales &amp; Support
+                    </li>
+                    <li class="color5">
+                        Enterprise architecture consulting
+                    </li>
+                    <li class="color5">
+                        Automated Infrastructure Deployment
+                    </li>
+                    <li class="color5">
+                        Azure AD Management &amp; Sync
                     </li>
                     <li class="color5">
                         Active Directory / Group Policy Auditing
@@ -55,16 +64,16 @@
                         Business process automation with PowerShell
                     </li>
                     <li class="color5">
-                        Custom .NET and UE4 application development
+                        Custom .NET application development
                     </li>
                     <li class="color5">
-                        Unreal Engine consulting
+                        Unreal Engine for Steam / PS4 / Xbox / Oculus VR
                     </li>
                     <li class="color5">
-                        Global Network & VPN Infrastructure consulting
+                        Global Network &amp; VPN Infrastructure consulting
                     </li>
                     <li class="color5">
-                        On-Site Disaster Recovery consulting
+                        Backups &amp; Disaster Recovery solutions
                     </li>
                     <li class="color5">
                         Azure Modern Data Warehouse solutions consulting
@@ -113,8 +122,8 @@
                         </div>
                     </div>
                     <div class="price-content equal-height">
-                        <div class="item-list">Complete cloud services with Azure for small business.</div>
-                        <div class="item-list">Host your infrastructure in Microsoft&#39;s Azure cloud.</div>
+                        <div class="item-list">Complete cloud services powered by Microsoft Azure.</div>
+                        <div class="item-list">Deploy highly-available infrastructure for your business.</div>
                         <div class="item-list">Guaranteed high availability with personal, rapid response support.</div>
                     </div>
                     <div class="text-center pb60">
@@ -136,7 +145,7 @@
                         </div>
                     </div>
                     <div class="price-content equal-height">
-                        <div class="item-list">Audit your small business network performance and security.</div>
+                        <div class="item-list">Audit your enterprise network performance and security.</div>
                         <div class="item-list">Design automated solutions for better user experiences.</div>
                         <div class="item-list">Supercharge your operations with hybrid cloud solutions.</div>
                     </div>
