--- a/soverance.com/Views/Home/About.cshtml
+++ b/soverance.com/Views/Home/About.cshtml
@@ -37,7 +37,7 @@
                         <p>Founded in 2012 by Scott McCutchen, Soverance Studios began as an independent game development company dedicated to bringing great ideas to life.</p>
                         <p>Today, we're pivoting to helping small businesses solve problems in the cloud.</p>
                         <p>Here at Soverance, we strive to build innovative solutions from unique ideas. We are on the bleeding edge of the technology curve, and always adding new skills to our offerings.</p>
-                        <p>We specialize in automated hybrid-cloud infrastructure design and deployment for small business, with a focus on the gaming industry.</p>                        
+                        <p>We specialize in automated hybrid-cloud infrastructure design and deployment, with a focus on the gaming industry.</p>                        
                     </div>
                     <a href="/images/consulting/mpn-logo.png" data-lightbox="game-slides">
                         <img src="/images/consulting/mpn-logo.png" alt="" class="img-responsive mlr-auto mb20">
