copy local for System.Web.Mvc

--- a/soverance.com/Views/Home/Consulting.cshtml
+++ b/soverance.com/Views/Home/Consulting.cshtml
@@ -49,7 +49,7 @@
                         Enterprise architecture consulting
                     </li>
                     <li class="color5">
-                        Automated Infrastructure Deployment
+                        Automated Infrastructure Deployment &Aacute; Migration
                     </li>
                     <li class="color5">
                         Azure AD Management &amp; Sync
