Client password update
Provides a method for generating unique credentials for client accounts, and then providing an expiring web link for clients to retrieve those credentials via email.  The link expires in 24 hours.

--- a/soverance.com/Views/Account/Profile.cshtml
+++ b/soverance.com/Views/Account/Profile.cshtml
@@ -21,6 +21,11 @@
                             @User.FindFirst("name").Value
                         </li>
                     </ul>
+                    <ul class="list-1 pt10">
+                        <li class="color5">
+                            <a href="/client/generatelink">Generate Client Password Retrieval Link</a>
+                        </li>
+                    </ul>
                     <p>
                         <a asp-controller="Account" asp-action="SignOut" class="btn header-btn ml25 color-white hidden-sm hidden-xs">Sign Out</a>
                     </p>
